src/test/test-models/bad/function-signatures/falling_factorial.stan
data { 
  real d_real;
  real r_real;
}
transformed data {
  real transformed_data_real;
  transformed_data_real <- falling_factorial(d_real, r_real);
}

  
